styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
* {
  font-family: "Roboto", sans-serif;
}
html,
body {
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgb(228, 217, 217);
}
.calculator {
  height: 60%;
  display: flex;
  flex-direction: column;
  background-color: pink;
  padding: 32px;
  border-radius: 16px;
  box-shadow:
    3px 3px rgb(255, 192, 203) inset,
    0em 0.4em 0.6em rgb(63, 63, 62);
  border: 2px rgb(207, 160, 168) solid;
}
.display {
  display: flex;
  flex-direction: column;
  align-items: end;
  justify-content: flex-end;
  height: 20%;
  padding: 16px;
  border-radius: 24px;
  background-color: white;
  box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.5);
  font-size: 26px;
  border: 1.5px rgb(207, 160, 168) solid;
}
.button {
  display: flex;
  justify-content: center;
  align-items: center;

  min-width: 64px;
  min-height: 64px;
  max-width: 64px;
  max-height: 64px;
  border-radius: 32px;
  border: 0px rgb(163, 118, 159) solid;
  background-color: white;
  box-sizing: border-box;
  border-collapse: collapse;
  font-size: 24px;
  color: rgb(35, 34, 36);
  text-shadow: 0.2px 0.2px rgb(198, 139, 221);
  box-shadow: 0px 1px 2px rgba(190, 135, 196, 0.616);
}
.button:hover {
  background-color: rgb(255, 226, 246);
}
.calculator-buttons {
  display: flex;
  flex-direction: column;
  gap: 8px;
  flex: 0.5 1 auto;
  align-items: end;
  padding: 16px 0 16px 0;
}
.buttons-top,
.buttons-second,
.buttons-third,
.buttons-fourth,
.buttons-fifth {
  display: flex;
  gap: 10px;
  flex: 0.5 1 auto;
}

#multiply,
#divide,
#minus,
#plus,
#equal {
  background-color: rgb(202, 150, 209);
}

#multiply:hover,
#divide:hover,
#minus:hover,
#plus:hover,
#equal:hover {
  background-color: rgb(184, 147, 209);
}

#backspace,
#clear,
#percentage {
  background-color: rgb(173, 125, 192);
}
#backspace:hover,
#clear:hover,
#percentage:hover {
  background-color: rgb(158, 115, 175);
}

